faq-accordion/styles/styles.css
* {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background: -webkit-gradient(linear, left top, left bottom, from(#af67e9), to(#6565e7));
  background: linear-gradient(#af67e9 0%, #6565e7 100%);
  height: 100vh;
  width: 100vw;
  font-family: 'Kumbh Sans', sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.card {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  width: 900px;
  height: 500px;
  border-radius: 20px;
}

.card h1 {
  letter-spacing: 1px;
  margin-bottom: 30px;
  color: #1d1e35;
}

.card .img-col {
  background-image: url(../img/bg-pattern-desktop.svg);
  background-size: 200%;
  background-repeat: no-repeat;
  background-position: right -10% bottom 35%;
  width: 50%;
  height: 100%;
  position: relative;
  overflow: hidden;
}

.card .img-col .img-women {
  width: 110%;
  position: absolute;
  top: 50px;
  right: 40px;
  z-index: 10;
}

.card .faq-col {
  padding: 50px;
  width: 50%;
}

.card .item-container {
  border-bottom: 1px solid #e7e7e9;
  margin-bottom: 10px;
  padding: 10px;
}

.card .question-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  margin-bottom: 15px;
  cursor: pointer;
}

.card .arrow {
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  transition: -webkit-transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
}

.card .active + .arrow {
  -webkit-transform: rotate(180deg);
          transform: rotate(180deg);
}

.card .question {
  color: #4a4b5e;
}

.card .question:hover {
  color: #f47c57;
  -webkit-transition: 200ms ease-in-out;
  transition: 200ms ease-in-out;
}

.card .answer {
  color: #787887;
  max-height: 0;
  overflow: hidden;
}

.card .active {
  font-weight: bold;
  color: #1d1e35;
  display: block;
}

.card-container {
  position: relative;
}

.card-container .img-cube {
  position: absolute;
  left: -90px;
  top: 190px;
  z-index: 100;
}
/*# sourceMappingURL=styles.css.map */

